Changes to siz of h elements and changes to text in readme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,7 @@ h1 {
 
 h2 {
     font-family: Dongle, Helvetica, sans-serif;
-    display: block;
-    margin: auto;
+    display: block; 
     font-size: 80px;
 }
 
@@ -524,10 +523,28 @@ label {
 
 }
 
+@media screen and (max-width: 820px) {
+    #love-edinburgh {
+        font-size: 4em;
+    }
+
+    #menu {
+        font-size: 2em;
+    }
+
+    #menu>li {
+        padding: 2px;
+    }
+
+    #events-heading {
+        font-size: 3em;
+    }
+}
+
 @media screen and (max-width: 800px) {
 
     h1 {
-        font-size: 60%;
+        font-size: 70%;
     }
 
 
@@ -566,17 +583,17 @@ label {
     }
 
     #menu {
-        font-size: 1.5em;
+        font-size: 1.8em;
     }
 
     .social-media h3 {
         text-decoration: none;
         color: black;
-        font-size: 1em;
+        font-size: 1.6em;
     }
 
     .social-media i {
-        font-size: 1em;
+        font-size: 1.5em;
     }
 
     #travel-div {
@@ -584,15 +601,19 @@ label {
     }
 
     #travel-text {
-        font-size: 0.36em;
+        font-size: 0.5em;
     }
 
-    #events-outer {
-        font-size: 0.6em;
+    #events-outer>p {
+        font-size: 0.9em;
+    }
+
+    #events-outer>h3 {
+        font-size: 1.5em;
     }
 
     #events-heading {
-        font-size: 1.3em;
+        font-size: 2em;
     }
 
     #food-container {
@@ -617,15 +638,15 @@ label {
     }
 
     #eat-heading {
-        font-size: 35px;
+        font-size: 2em;
     }
 
     #food-text>p {
-        font-size: 0.9em;
+        font-size: 1.7em;
     }
 
     #food-text>h4 {
-        font-size: 1.1em;
+        font-size: 1.9em;
         margin-right: 11%;
     }
 
@@ -634,7 +655,6 @@ label {
         width: 50%;
         height: 450px;
         font-size: 0.5em;
-        column-count: 1;
         display: block;
     }
 
@@ -670,11 +690,11 @@ label {
 @media screen and (max-width: 450px) {
 
     h1 {
-        font-size: 0.55em;
+        font-size: 0.7em;
     }
 
     #menu>li {
-        font-size: 0.5em;
+        font-size: 0.6em;
         margin-left: 2px;
         margin-right: 5px;
         letter-spacing: 1px;
