--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,8 @@ h1 {
 h2 {
     font-family: Dongle, Helvetica, sans-serif;
     display: block; 
-    font-size: 80px;
+    font-size: 60px;
+    line-height: 0%;
 }
 
 h3 {
@@ -74,7 +75,7 @@ body {
 /* Addition of hover effect of navigation menu */
 
 #menu a:hover {
-    color: grey;
+    color: gray;
 }
 
 /* Addition of hero image on homepage */
@@ -100,9 +101,9 @@ body {
     float: left;
     position: absolute;
     font-family: Dongle, Helvetica, sans-serif;
-    margin: 0 25% 0 0;
+    margin: 0 30% 0 0;
     font-size: 35px;
-    padding: 40px;
+    padding: 50px;
 }
 
 /* repositioning of iframe element and it's associated div element on homepage */
@@ -269,7 +270,6 @@ Code taken from inspiration from https://www.w3schools.com/css/css_image_transpa
     clear: left;
     text-align: center;
     justify-content: center;
-
 }
 
 #food-text>p {
@@ -396,6 +396,31 @@ label {
 
 /*Responsive element code below */
 
+
+@media screen and (max-width: 2000px) {
+
+    #form-text-container {
+        width: 50%;
+        margin: 0 auto;
+    }
+
+    #food-container {
+        width: 70%;
+    }
+
+    #food-text {
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    #food-text>h3 {
+        width: 90%;
+        margin: 0 auto;
+        display: block;
+    }
+
+}
+
 @media screen and (max-width: 1200px) {
 
     #form-text-container {
@@ -403,6 +428,11 @@ label {
         display: block;
         width: 70%;
         height: auto;
+        float: left;
+    }
+
+    #form-image {
+        float:left;
     }
 
 }
@@ -523,13 +553,14 @@ label {
 
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 900px) {
+
     #love-edinburgh {
-        font-size: 4em;
+        font-size: 2em;
     }
 
     #menu {
-        font-size: 2em;
+        font-size: 1.5em;
     }
 
     #menu>li {
@@ -544,7 +575,7 @@ label {
 @media screen and (max-width: 800px) {
 
     h1 {
-        font-size: 70%;
+        font-size: 2em;
     }
 
 
@@ -687,14 +718,20 @@ label {
 
 }
 
-@media screen and (max-width: 450px) {
-
+@media screen and (max-width: 680px) {
     h1 {
-        font-size: 0.7em;
+        font-size: 1em;
+    }
+}
+
+@media screen and (max-width: 750px) {
+
+    #love-edinburgh {
+        font-size: 2em;
     }
 
-    #menu>li {
-        font-size: 0.6em;
+    #menu {
+        font-size: 1.5em;
         margin-left: 2px;
         margin-right: 5px;
         letter-spacing: 1px;
@@ -707,12 +744,25 @@ label {
     #eat-heading {
         font-size: 1.5em;
     }
+
+    #travel-text>h2 {
+        font-size: 1.2em;
+    }
+
+    #travel-text>p {
+        font-size: 0.8em;
+    }
+
+    #events-outer {
+        font-size:  0.9em;
+    }
+
 }
 
 @media screen and (max-width: 820px) {
 
     h1 {
-        font-size: 1em;
+        font-size: 2em;
     }
 
     #menu>li {
@@ -732,7 +782,7 @@ label {
 }
 
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 450px) {
 
     h1 {
         font-size: 0.6em;
@@ -753,44 +803,6 @@ label {
         font-size: 1.5em;
     }
 }
-
-@media screen and (max-width: 450px) {
-
-    h1 {
-        font-size: 0.7em;
-    }
-
-    #menu>li {
-        font-size: 0.6em;
-        margin-left: 2px;
-        margin-right: 5px;
-        letter-spacing: 1px;
-    }
-
-    .signup-button {
-        margin-left: auto;
-    }
-
-    #eat-heading {
-        font-size: 1.5em;
-    }
-}
-
-
-@media screen and (max-width: 550px) {
-
-    h1 {
-        font-size: 0.6em;
-    }
-
-    #menu>li {
-        font-size: 0.45em;
-        margin-left: 2px;
-        margin-right: 5px;
-        letter-spacing: 1px;
-    }
-}
-
 
 @media screen and (max-width: 350px) {
 
