--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@300&family=Dongle&family=Lato:wght@300&family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300;400&family=Fredoka:wght@300;400&display=swap');
 
 /* heading and body styling */
 
@@ -7,6 +7,7 @@ h1 {
     display: block;
     margin: auto;
     font-size: 100px;
+    font-weight: 700;
 }
 
 h2 {
@@ -14,6 +15,7 @@ h2 {
     display: block; 
     font-size: 60px;
     line-height: 0%;
+    font-weight: 400;
 }
 
 h3 {
@@ -34,6 +36,7 @@ body {
     font-family: Dongle, Helvetica, sans-serif;
     font-weight: 200;
     color: black;
+    font-weight: 300;
 }
 
 /* Removal of text decoration of love edinburgh link back to homepage */
@@ -42,7 +45,8 @@ body {
     text-decoration: none;
     color: black;
     font-size: 250%;
-    line-height: 78px;
+    line-height: 100px;
+    text-transform: capitalize;
 }
 
 /* Addition of navigation menu */
@@ -53,10 +57,11 @@ body {
     list-style-type: none;
     font-size: 180%;
     float: right;
+    text-transform: uppercase;
 }
 
 #menu ul {
-    line-height: 78px;
+    line-height: 100px;
 }
 
 #menu li {
