Addition of hyperlinks in credits section to improve readability of readme file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300;400&family=Fredoka:wght@300;400&display=swap');
 
-/* Wildcard code inspired from love running project  */
+/* Wildcard code inspired from code institute love running project  */
 
 * {
     margin: 0;
