--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 
 h1 {
     font-family: Dongle, Helvetica, sans-serif;
-    display: block;
+    /* display: block; */
     margin: auto;
     font-size: 100px;
     font-weight: 700;
@@ -20,32 +20,48 @@ h1 {
 
 h2 {
     font-family: Dongle, Helvetica, sans-serif;
-    display: block; 
-    font-size: 60px;
-    line-height: 0%;
+    /* display: block;  */
+    font-size: 40px;
     font-weight: 400;
 }
 
 h3 {
     font-family: Dongle, Helvetica, sans-serif;
-    display: block;
-    margin: auto;
+    /* display: block; */
+    /* margin: auto; */
     font-size: 45px;
 }
 
 h4 {
     font-family: Dongle, Helvetica, sans-serif;
-    display: block;
-    margin: auto;
+    /* display: block; */
+    /* margin: auto; */
     font-size: 30px;
 }
 
 body {
     font-family: Dongle, Helvetica, sans-serif;
-    font-weight: 200;
     color: black;
     font-weight: 300;
 }
+
+/* Postioning of logo and navigation containers and outer container */
+
+
+#nav-logo {
+    display: inline-block;
+    height: 100px;
+    width: 100%;
+}
+
+#menu-container {
+    float: right;
+}
+
+#logo-container {
+    float: left;
+}
+
 
 /* removal of text decoration of love edinburgh link back to homepage */
 
@@ -60,8 +76,7 @@ body {
 #menu {
     font-family: Dongle, Helvetica, sans-serif;
     letter-spacing: 2px;
-    list-style-type: none;
-    font-size: 180%;
+    font-size: 30px;
     float: right;
     text-transform: uppercase;
 }
@@ -94,33 +109,20 @@ body {
     color: gray;
 }
 
-#nav-logo {
-    display: inline-block;
-    height: 100px;
-    width: 100%;
-}
-
-#menu-container {
-    float: right;
-}
-
-#logo-container {
-    float: left;
-}
-
 /* addition of hero image on homepage */
 
 #hero-outer {
-    height: 1200px;
+    height: 1200px; 
     width: 100%;
-    position: relative;
+    /* check code below is still neccessary */
+    position: relative; 
 }
 
 /* image from pexels.com - https://www.pexels.com/photo/silhouette-of-big-ben-surrounded-by-fog-during-daytime-161863/ */
 
 #hero-image {
     width: 100%;
-    height: 1200px;
+    height: 1200px; 
     background: url('../images/hero-image.jpg') no-repeat center center;
     background-size: cover;
 }
@@ -128,8 +130,7 @@ body {
 /* positioning and styling of intro text (overlapping hero image */
 
 #intro-text {
-    float: left;
-    position: absolute;
+    /* position: absolute; */
     font-family: Dongle, Helvetica, sans-serif;
     margin: 0 30% 0 0;
     font-size: 35px;
@@ -154,10 +155,20 @@ iframe {
 }
 
 /* addition of social media in footer and styling of footer */
+/* consider putting social media as ID instead */
+
+footer {
+     height: 100px;
+     width: 100%;
+     padding: 15px; 
+}
+
+footer li {
+    display: inline;
+}
 
 .social-media {
     text-align: center;
-    height: 100px;
 }
 
 .social-media>li {
@@ -165,20 +176,15 @@ iframe {
 }
 
 .social-media i {
-    text-decoration: none;
+    text-decoration: none; 
     margin: 1.1%;
     font-size: 2em;
     color: #000000;
 }
 
 .social-media h3 {
-    text-decoration: none;
-    color: black;
-    font-size: 35px;
-}
-
-footer li {
-    display: inline;
+    font-size: 200%;
+    /* color: black; */
 }
 
 /* addition of background image on events page */
@@ -191,30 +197,32 @@ footer li {
 
 /* image from pexels.com - https://www.pexels.com/photo/silhouette-photography-of-people-on-theater-1714361/ */
 
-#edfest {
+#events-background {
     width: 100%;
     height: 1445px;
     background: url('../images/theatre.jpg') no-repeat center center;
     background-size: cover;
-    background-position: center;
-    display: block;
-    background-size: auto 100%;
+    /* background-position: center; */
+    /* display: block; */
+    /* background-size: auto 100%; */
 }
 
-#events-heading {
+/* #events-heading {
     font-size: 50px;
     text-align: center;
     padding: 20px;
-}
+} */
 
 /* styling of div elements containing text on events page */
 
 #events-fringe {
-    font-family: Dongle, Helvetica, sans-serif;
+     margin-top: 30px;
+}
+
+#events-fringe, #events-film, #events-book, #events-music {
+    color: white; 
     font-size: 1.85em;
-    color: white;
-    margin-bottom: 100px;
-    margin-left: 10%;
+    margin-bottom: 50px;
     background-color: black;
     opacity: 0.85;
     width: 50%;
@@ -222,161 +230,112 @@ footer li {
     padding: 10px;
 }
 
-
-
-#events-film {
-    font-family: Dongle, Helvetica, sans-serif;
-    font-size: 1.85em;
-    float: right;
-    color: white;
-    margin-bottom: 100px;
-    margin-right: 10%;
-    background-color: black;
-    opacity: 0.85;
-    width: 50%;
-    text-align: center;
-}
-
-#events-book {
-    font-family: Dongle, Helvetica, sans-serif;
-    font-size: 1.85em;
+#events-fringe, #events-book {
     margin-left: 10%;
-    margin-bottom: 100px;
-    color: white;
-    background-color: black;
-    opacity: 0.85;
     float: left;
-    width: 50%;
-    text-align: center;
 }
 
-#events-music {
-    font-family: Dongle, Helvetica, sans-serif;
-    font-size: 1.85em;
-    margin-bottom: 100px;
-    float: right;
-    color: white;
-    margin-bottom: 100px;
+#events-film, #events-music {
     margin-right: 10%;
-    margin-left: 75%;
-    background-color: black;
-    opacity: 0.85;
-    width: 50%;
-    text-align: center;
-    padding: 10px;
+    float: right;
 }
 
 /* addition of hover effects of div elements on events page */
 /* code taken from inspiration from https://www.w3schools.com/css/css_image_transparency.asp */
 
-#events-fringe:hover {
-    opacity: 1;
-}
-
-#events-film:hover {
-    opacity: 1;
-}
-
-#events-book:hover {
-    opacity: 1;
-}
-
-#events-music:hover {
+#events-fringe:hover, #events-film:hover, #events-book:hover, #events-music:hover {
     opacity: 1;
 }
 
 /* styling of text of eat+drink page */
 
-#eat-heading {
+/* #eat-heading {
     font-size:  50px;
     text-align: center;
     display: block;
     padding: 25px;
     font-weight: 400;
-}
+} */
 
 #eat-text {
     color: black;
     font-family: Dongle, Helvetica, sans-serif;
-    font-size: 35px;
     text-align: center;
+    display: block;
 }
 
 #eat-text>p {
     margin: 0 50px 10px 0;
-    display: block;
     font-size: 32px;
-    float: left;
     padding: 40px;
 }
 
-/* styling of div element on eat+drink page */
+#eat-text>h2, #eat-text>p {
+    line-height: 30px;
+}
+
+/* Setting position and display of container of img elements */
 
 #eat-container {
     display: flex;
     margin: auto;
-    position: relative;
+    position: relative; 
 }
 
 /* styling of img elements on eat+drink page */
 
-#champagne-img {
+#champagne-img, #oysters-img {
     height: auto;
     width: 50%;
-    padding-bottom: 20px;
+    padding-bottom: 30px;
 }
 
-#oysters-img {
-    height: auto;
-    width: 50%;
-    padding-bottom: 20px;
-}
-
-#travel-container {
-    margin: auto;
-    width: 60%;
-}
-
-/* addition of travel outer element */
+/* positioning of travel outer element */
 
 #travel-outer {
     height: 1000px;
     width: 100%;
     overflow: hidden;
-    position: relative;
+    /* position: relative; */
 }
 
-/* Addition of background image on travel adive page. Note - I deliberately wanted to repeat the image 
+/* Addition of background image on travel adive page. 
  image from pexels.com - https://www.pexels.com/photo/three-person-crossing-streets-2242170/ */
 
-#edin-travel {
-    background: url('../images/ed-travel.jpg') repeat center center;
+ #edin-travel {
+    background: url('../images/ed-travel.jpg') no-repeat center center;
     height: 1000px;
     width: 100%;
     padding-top: 20px;
     padding-bottom: 20px;
-    background-size: contain;
+    background-size: cover;
+}
+
+/* styling of div element on travel page */
+
+#travel-container {
+    margin: 0 auto; 
+    width: 60%;
+    padding-top: 20px;
 }
 
 /* styling of text on travel advice page and div element */
 
 #travel-text {
-    font-family: Dongle, Helvetica, sans-serif;
     font-size: 1.9em;
     color: white;
     background-color: black;
-    opacity: 0.8;
-    width: 82%;
+    opacity: 0.85;
+    width: 90%;
     text-align: center;
-    margin: 0 auto;
+    margin: 0 auto; 
     padding: 40px;
-    position: relative;
+    /* position: relative; */
 }
 
 #travel-text>h2 {
     text-decoration: underline;
-    font-size: 1.8em;
-    padding: 20px;
+    padding: 15px;
 }
 
 /* Addition of image background for form on newsletter page 
@@ -386,32 +345,35 @@ Image from pexels.com - https://www.pexels.com/photo/photo-of-live-concert-15403
     width: 100%;
     height: 800px;
     background: url('../images/newsletter-signup.jpg') no-repeat center center;
+    background-size: cover;
+    position: relative;
 }
 
 #form-text-container {
-    width: 300px;
+    width: 90%;
     height: auto;
     background-color: rgb(4, 0, 0);
     color: white;
     font-family: Dongle, Helvetica, sans-serif;
-    font-size: 25px;
+    font-size: 30px;
     opacity: 0.9;
     padding: 10px;
+    line-height: 30px;
+    position: absolute;
 }
 
 /* Styling of inputs and associated labels on newsletter page */
 
-#form-heading {
-    font-family: Dongle, Helvetica, sans-serif;
+/* #form-heading {
     display: block;
     margin: auto;
-    font-size: 30px;
-}
+    font-size: 10px;
+} */
 
-#newsletter-form {
+/* #newsletter-form {
     width: auto;
     height: auto;
-}
+} */
 
 #signup-button {
     margin: auto;
@@ -421,8 +383,9 @@ Image from pexels.com - https://www.pexels.com/photo/photo-of-live-concert-15403
 label {
     display: inline-block;
     width: 105px;
-    text-align: left;
-    font-size: 25px;
+    height: auto;
+    /* text-align: left;  */
+    font-size: 25px; 
 }
 
 
@@ -432,40 +395,39 @@ label {
 @media screen and (max-width: 2000px) {
 
     #form-text-container {
-        width: 50%;
+        width: 40%;
         margin: 0 auto;
+        position: absolute;
+    }
+
+    #form-image {
+        position: realtive;
     }
 
     #eat-container {
         width: 70%;
     }
 
-    #eat-text {
-        width: 100%;
-        margin: 0 auto;
-    }
+    /* #eat-text {
+        /* width: 100%; */
+        /* margin: 0 auto; 
+    }*/ 
 
-    #eat-text>h3 {
+    /* #eat-text>h2 {
         width: 90%;
         margin: 0 auto;
         display: block;
-    }
+    } */
 
 }
 
-@media screen and (max-width: 1200px) {
+/* @media screen and (max-width: 1200px) {
 
-    #form-text-container {
-        font-size: 1em;
-        display: block;
-        width: 70%;
-        height: auto;
-        float: left;
-    }
+     #form-text-container {
+        width: 90%;
+}
 
-    #form-image {
-        float:left;
-    }
+
 
 }
 
@@ -473,6 +435,11 @@ label {
 
     h1 {
         font-size: 2em;
+    }
+
+    #hero-image {
+        width: auto;
+        height: auto;
     }
 
 }
@@ -484,11 +451,11 @@ label {
         height: auto;
     }
 
-}
+} */
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1200px) {
 
-    h1 {
+    /* h1 {
         font-size: 1.5em;
     }
 
@@ -498,150 +465,112 @@ label {
 
     h3 {
         font-size: 1.2em;
-    }
+    } */
 
-    #intro-text {
+    /* #intro-text {
         font-size: 1em;
-    }
+    } */
 
-    #menu {
+    /* #menu {
         font-size: 2em;
-    }
-
+    } */
+/* might want to line up the video */
     iframe {
-        width: 90%;
-        height: 400px;
+        width: 100%;
+        margin: 0 auto;
     }
 
     #hero-image {
         width: 100%;
         height: 1200px;
+        background-size: cover;
     }
 
     .social-media h3 {
-        color: black;
-        font-size: 25px;
-    }
-
-    #eat-heading {
         font-size: 35px;
     }
 
     #eat-container {
         width: auto;
-        height: auto;
-    }
+        /* height: auto; */
+    } 
 
-    #eat-text {
-        font-size: 1.2em;
-        display: block;
-    }
-
-    #travel-container {
+    /* #travel-container {
         font-size: 50px;
-    }
+    } */
 
     #travel-text {
-        font-size: 0.5em;
+        font-size: 2em;
     }
 
-    #events-outer {
-        font-size: 0.9em;
-    }
-
-    #events-heading {
-        font-size: 1.8em;
-    }
 
     label {
-        display: inline-block;
-        font-size: 1em;
-        text-align: left;
-        clear: both;
+        /* display: inline-block; */
+        font-size: 0.85em; 
+        /* text-align: left; */
+        /* clear: both; */
     }
 
-    #newsletter-form {
-        margin-left: 50px;
-    }
-
+    /* might want to align sign up button */
+/* 
     .signup-button {
-        margin-left: auto;
-    }
+        margin-left: 10px;
+    } */
+
 
     #form-text-container {
-        font-size: 1em;
-        display: block;
-        width: 500px;
+        /* font-size: 1.5em; */
+        /* display: block; */
+        width: 100%;
         height: 200px;
     }
 
-    #form-heading>h4 {
-        font-size: 0.62em;
+    #newsletter-form>input {
+        margin-left: 5px;
     }
 
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 972px) {
 
-    #logo {
-        font-size: 2em;
+   h1 {
+        font-size: 1.6em;
     }
 
     #menu {
-        font-size: 1.5em;
+        font-size: 1.6em;
     }
 
-    #nav-logo {
-        height: auto;
-    }
-
-    #menu>li {
-        padding: 2px;
-    }
-
-    #events-heading {
-        font-size: 3em;
-    }
-    
-    #eat-text>h3 {
-        font-size: 2em;
+    #travel-text {
+        font-size: 1.9em;
     }
 }
 
-@media screen and (max-width: 800px) {
-
-    h1 {
-        font-size: 2em;
-    }
-
+@media screen and (max-width: 821px) {
 
     h2 {
-        font-size: 1em;
+        font-size: 1.8em;
     }
 
-    h3 {
-        font-size: 0.9em;
-    }
-
-    iframe {
+    /* iframe {
         width: 90%;
         height: 400px;
-    }
+    } */
 
-    #hero-image {
+    /* #hero-image {
         width: auto;
         height: 1200px;
-    }
+    } */
 
     #menu>li {
         font-size: 0.9em;
-        margin-left: 2px;
-        margin-right: 5px;
-        letter-spacing: 1px;
+        margin-left: 5px;
+        margin-right: 3px;
+        letter-spacing: 2px;
     }
 
     #intro-text {
-        font-size: 1.2em;
+        font-size: 1.6em;
         margin: 0 auto;
         position: relative;
         text-align: justify;
@@ -652,8 +581,6 @@ label {
     }
 
     .social-media h3 {
-        text-decoration: none;
-        color: black;
         font-size: 1.6em;
     }
 
@@ -670,7 +597,7 @@ label {
     }
 
     #events-outer>p {
-        font-size: 0.9em;
+        font-size: 1.8em;
     }
 
     #events-outer>h3 {
@@ -822,7 +749,7 @@ label {
     }
 
 }
-
+/* 
 @media screen and (max-width: 820px) {
 
     h1 {
@@ -850,7 +777,7 @@ label {
     #intro-text {
         font-size: 1.6em;
     }
-}
+} */
 
 
 @media screen and (max-width: 450px) {
