--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,6 +161,7 @@ footer {
      height: 100px;
      width: 100%;
      padding: 15px; 
+     text-align: center;
 }
 
 footer li {
@@ -258,20 +259,18 @@ footer li {
 } */
 
 #eat-text {
-    color: black;
-    font-family: Dongle, Helvetica, sans-serif;
-    text-align: center;
-    display: block;
+    display: block; 
 }
 
 #eat-text>p {
-    margin: 0 50px 10px 0;
     font-size: 32px;
-    padding: 40px;
 }
 
 #eat-text>h2, #eat-text>p {
     line-height: 30px;
+    /* margin: 0 5px 0 5px; */
+    text-align: left;
+    padding: 20px;
 }
 
 /* Setting position and display of container of img elements */
@@ -315,7 +314,7 @@ footer li {
 
 #travel-container {
     margin: 0 auto; 
-    width: 60%;
+    width: 70%;
     padding-top: 20px;
 }
 
@@ -326,7 +325,7 @@ footer li {
     color: white;
     background-color: black;
     opacity: 0.85;
-    width: 90%;
+    width: 70%;
     text-align: center;
     margin: 0 auto; 
     padding: 40px;
@@ -407,74 +406,12 @@ label {
     #eat-container {
         width: 70%;
     }
-
-    /* #eat-text {
-        /* width: 100%; */
-        /* margin: 0 auto; 
-    }*/ 
-
-    /* #eat-text>h2 {
-        width: 90%;
-        margin: 0 auto;
-        display: block;
-    } */
-
-}
-
-/* @media screen and (max-width: 1200px) {
-
-     #form-text-container {
-        width: 90%;
 }
 
 
-
-}
-
-@media screen and (max-width: 1012px) {
-
-    h1 {
-        font-size: 2em;
-    }
-
-    #hero-image {
-        width: auto;
-        height: auto;
-    }
-
-}
-
-@media screen and (max-width: 979px) {
-
-    #hero-image {
-        width: auto;
-        height: auto;
-    }
-
-} */
 
 @media screen and (max-width: 1200px) {
 
-    /* h1 {
-        font-size: 1.5em;
-    }
-
-    h2 {
-        font-size: 1.3em;
-    }
-
-    h3 {
-        font-size: 1.2em;
-    } */
-
-    /* #intro-text {
-        font-size: 1em;
-    } */
-
-    /* #menu {
-        font-size: 2em;
-    } */
-/* might want to line up the video */
     iframe {
         width: 100%;
         margin: 0 auto;
@@ -542,7 +479,7 @@ label {
     }
 
     #travel-text {
-        font-size: 1.9em;
+        font-size: 1.8em;
     }
 }
 
@@ -551,16 +488,6 @@ label {
     h2 {
         font-size: 1.8em;
     }
-
-    /* iframe {
-        width: 90%;
-        height: 400px;
-    } */
-
-    /* #hero-image {
-        width: auto;
-        height: 1200px;
-    } */
 
     #menu>li {
         font-size: 0.9em;
@@ -603,22 +530,6 @@ label {
     #events-fringe>h2, #events-film>h2, #events-book>h2, #events-music>h2 {
         font-size: 1.1em;
         }
-/* 
-    #eat-container {
-        width: auto;
-        height: auto;
-        margin: auto;
-    } */
-
-    /* #champagne-img {
-        width: 50%;
-        height: auto;
-    } */
-
-    /* #oysters-img {
-        width: 50%;
-        height: auto;
-    } */
 
     #eat-text>h2 {
         font-size: 1.9em;
@@ -627,19 +538,6 @@ label {
     #eat-text>p {
         font-size: 1.7em;
     }
-
-    /* #eat-text>h4 {
-        font-size: 1.9em;
-        margin-right: 11%;
-    } */
-
-
-    /* #form-text-container {
-        width: 50%; 
-        height: 450px;
-        font-size: 0.7em;
-     display: block; 
-    } */
 
     label {
         /* display: inline-block; */
@@ -678,14 +576,6 @@ label {
         letter-spacing: 1px;
     }
 
-    /* .signup-button {
-        margin-left: auto;
-    } */
-
-    /* #travel-text>h2 {
-        font-size: 1.2em;
-    } */
-
     #travel-text>p {
         font-size: 1em;
     } 
@@ -697,49 +587,13 @@ label {
      #events-outer {
         font-size:  0.9em;
     } 
-/*    
-    #form-text-container>h2 {
-        font-size: 0.9em;
-
-    }  */
 
 }
 
-@media screen and (max-width: 680px) {
-/* revisit this code */
-   h1 {
-        font-size: 1.3em;
-        line-height: 0.5px;
-        margin: auto 100%;
-        column-count: 1;
-    }
-
-    #menu {
-        display: inline-block;
-        height: 100px;
-        width: 125%;  
-        font-size: 1.7em;
-        padding: 0;
-        column-count: 1;
-        line-height: 0.5px;
-    }
-
-    h1, #menu {
-        margin: auto;
-    }
-
-    #nav-logo {
-        height: 150px;
-        width: 100%;
-    }
-}
-
-
-/* 
-@media screen and (max-width: 820px) {
+/* @media screen and (max-width: 820px) {
 
     h1 {
-        font-size: 2em;
+        font-size: 1.2em;
         display: -ms-inline-grid;
         text-align: center;
     }
@@ -756,21 +610,16 @@ label {
         margin-left: auto;
     }
 
-    /* #eat-heading {
-        font-size: 1.5em;
-    } */
-/* 
-    #intro-text {
-        font-size: 1.6em;
-    }
-} */ 
+} */
 
 
-@media screen and (max-width: 450px) {
+
+
+@media screen and (max-width: 820px) {
 
 
     #nav-logo {
-        height: 100px;
+        height: 90px;
     }
 
     
@@ -789,21 +638,21 @@ label {
         margin-left: 1px;
         text-align: center;
         display:block;
-        float: right;
-        padding-right: 0;
+        /* float: right;  */
+        /* padding-right: 0; */
     }
 
     #menu>li {
-        font-size: 0.7em;
+        font-size: 0.9em;
+        font-weight: 400;
         letter-spacing: 2px;
         line-height: 0.8em;
-        float: none;
-        /* column-count: 0.5; */
+        /* float: none; */
     }
     
-    #menu {
+    /* #menu {
         text-align: left;
-    }
+    } */
 
     #intro-text {
         font-size: 1.4em;
@@ -833,24 +682,15 @@ label {
         font-size: 0.7em;
     }
 
-    /* #eat-heading {
-        font-size: 1.5em;
-    } */
+    #form-text-container {
+        font-size: 1em;
+        /* display: block; */
+        /* width: 75%; */
+        height: auto;
+    }
 
 }
 
-/* @media screen and (max-width: 400px) {
-
-    #logo-container, #menu-container {
-        height: 70px;
-        line-height: 10px;
-    }
-
-    #menu {
-        font-size: 2px;
-    }
-
-} */
 
 
 @media screen and (max-width: 350px) {
@@ -872,7 +712,7 @@ label {
     }
 
     #menu>li {
-        font-size: 0.7em;
+        font-size: 0.8em;
         margin-left: 1px;
         margin-right: 3px; 
         letter-spacing: 0.2px; 
