--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,6 @@
 
 h1 {
     font-family: Dongle, Helvetica, sans-serif;
-    /* display: block; */
     margin: auto;
     font-size: 100px;
     font-weight: 700;
@@ -20,23 +19,13 @@ h1 {
 
 h2 {
     font-family: Dongle, Helvetica, sans-serif;
-    /* display: block;  */
     font-size: 40px;
     font-weight: 400;
 }
 
 h3 {
     font-family: Dongle, Helvetica, sans-serif;
-    /* display: block; */
-    /* margin: auto; */
     font-size: 45px;
-}
-
-h4 {
-    font-family: Dongle, Helvetica, sans-serif;
-    /* display: block; */
-    /* margin: auto; */
-    font-size: 30px;
 }
 
 body {
@@ -114,8 +103,6 @@ body {
 #hero-outer {
     height: 1200px; 
     width: 100%;
-    /* check code below is still neccessary */
-    position: relative; 
 }
 
 /* image from pexels.com - https://www.pexels.com/photo/silhouette-of-big-ben-surrounded-by-fog-during-daytime-161863/ */
@@ -130,7 +117,6 @@ body {
 /* positioning and styling of intro text (overlapping hero image */
 
 #intro-text {
-    /* position: absolute; */
     font-family: Dongle, Helvetica, sans-serif;
     margin: 0 30% 0 0;
     font-size: 35px;
@@ -185,7 +171,6 @@ footer li {
 
 .social-media h3 {
     font-size: 200%;
-    /* color: black; */
 }
 
 /* addition of background image on events page */
@@ -203,16 +188,7 @@ footer li {
     height: 1445px;
     background: url('../images/theatre.jpg') no-repeat center center;
     background-size: cover;
-    /* background-position: center; */
-    /* display: block; */
-    /* background-size: auto 100%; */
 }
-
-/* #events-heading {
-    font-size: 50px;
-    text-align: center;
-    padding: 20px;
-} */
 
 /* styling of div elements containing text on events page */
 
@@ -250,14 +226,6 @@ footer li {
 
 /* styling of text of eat+drink page */
 
-/* #eat-heading {
-    font-size:  50px;
-    text-align: center;
-    display: block;
-    padding: 25px;
-    font-weight: 400;
-} */
-
 #eat-text {
     display: block; 
 }
@@ -268,7 +236,6 @@ footer li {
 
 #eat-text>h2, #eat-text>p {
     line-height: 30px;
-    /* margin: 0 5px 0 5px; */
     text-align: left;
     padding: 20px;
 }
@@ -295,7 +262,6 @@ footer li {
     height: 1000px;
     width: 100%;
     overflow: hidden;
-    /* position: relative; */
 }
 
 /* Addition of background image on travel adive page. 
@@ -345,7 +311,7 @@ Image from pexels.com - https://www.pexels.com/photo/photo-of-live-concert-15403
     height: 800px;
     background: url('../images/newsletter-signup.jpg') no-repeat center center;
     background-size: cover;
-    position: relative;
+    /* position: relative; */
 }
 
 #form-text-container {
@@ -358,24 +324,19 @@ Image from pexels.com - https://www.pexels.com/photo/photo-of-live-concert-15403
     opacity: 0.9;
     padding: 10px;
     line-height: 30px;
-    position: absolute;
+    /* position: absolute; */
 }
 
 /* Styling of inputs and associated labels on newsletter page */
 
-/* #form-heading {
-    display: block;
-    margin: auto;
-    font-size: 10px;
-} */
-
+/* newsletter form only used in responsive design if you comment this out - is this okay? */
 /* #newsletter-form {
     width: auto;
     height: auto;
-} */
+}  */
 
 #signup-button {
-    margin: auto;
+    height: 20px;
     width: 50px;
 }
 
@@ -383,7 +344,6 @@ label {
     display: inline-block;
     width: 105px;
     height: auto;
-    /* text-align: left;  */
     font-size: 25px; 
 }
 
@@ -429,12 +389,7 @@ label {
 
     #eat-container {
         width: auto;
-        /* height: auto; */
     } 
-
-    /* #travel-container {
-        font-size: 50px;
-    } */
 
     #travel-text {
         font-size: 2em;
@@ -442,10 +397,7 @@ label {
 
 
     label {
-        /* display: inline-block; */
         font-size: 0.85em; 
-        /* text-align: left; */
-        /* clear: both; */
     }
 
     /* might want to align sign up button */
@@ -456,8 +408,6 @@ label {
 
 
     #form-text-container {
-        /* font-size: 1.5em; */
-        /* display: block; */
         width: 100%;
         height: 200px;
     }
@@ -540,25 +490,16 @@ label {
     }
 
     label {
-        /* display: inline-block; */
         font-size: 1.5em;
-        /* text-align: left; */
-        /* clear: both; */
     }
 
     #newsletter-form {
         margin-left: 20px;
     }
 
-    /* .signup-button {
-        margin-left: auto;
-    } */
-
     #form-text-container {
         font-size: 1em;
-        /* display: block;  */
         width: auto;
-        /* height: 200px; */
     }
 
 }
@@ -590,31 +531,6 @@ label {
 
 }
 
-/* @media screen and (max-width: 820px) {
-
-    h1 {
-        font-size: 1.2em;
-        display: -ms-inline-grid;
-        text-align: center;
-    }
-
-    #menu>li {
-        font-size: 1.5em;
-        margin-left: 2px;
-        margin-right: 5px;
-        letter-spacing: 2px;
-        display: -ms-inline-grid;
-    }
-
-    .signup-button {
-        margin-left: auto;
-    }
-
-} */
-
-
-
-
 @media screen and (max-width: 820px) {
 
 
@@ -637,9 +553,7 @@ label {
         margin-top: 10px;
         margin-left: 1px;
         text-align: center;
-        display:block;
-        /* float: right;  */
-        /* padding-right: 0; */
+        display: block;
     }
 
     #menu>li {
@@ -647,12 +561,7 @@ label {
         font-weight: 400;
         letter-spacing: 2px;
         line-height: 0.8em;
-        /* float: none; */
     }
-    
-    /* #menu {
-        text-align: left;
-    } */
 
     #intro-text {
         font-size: 1.4em;
@@ -684,8 +593,6 @@ label {
 
     #form-text-container {
         font-size: 1em;
-        /* display: block; */
-        /* width: 75%; */
         height: auto;
     }
 
@@ -732,8 +639,6 @@ label {
         font-size: 1.2em;
         padding: 20px;
         margin: 0 auto;
-        /* position: relative; */
-        /* text-align: justify; */
     }
 
     #hero-image {
@@ -754,10 +659,6 @@ label {
         font-size: 0.6em;
     }
 
-    /* #events-heading {
-        font-size: 0.9em;
-    } */
-
     #eat-container {
         width: 90%;
         height: auto;
@@ -777,15 +678,9 @@ label {
 
     #eat-text>h2 {
         font-size: 1.1em;
-        /* margin-right: 11%; */
         line-height: 1px;
         width: 80%;
     }
-
-    /* #eat-container {
-        width: auto;
-        height: auto;
-    } */
 
     #eat-text>p {
         font-size: 0.8em;
@@ -797,7 +692,6 @@ label {
 
     #travel-text {
         font-size: 0.4em;
-        /* text-align: left; */
         padding: 10px;
     }
 
@@ -824,14 +718,8 @@ label {
 
     #form-text-container {
         font-size: 1.5em;
-        /* display: block; */
-        /* width: 75%; */
         height: auto;
     }
-/* 
-    #form-heading>h2 {
-        font-size: 0.4em;
-    } */
 
 }
 
