--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,10 @@ body {
     float: left;
 }
 
+.active {
+    border-bottom: 1px solid gray;
+}
+
 
 /* removal of text decoration of love edinburgh link back to homepage */
 
@@ -73,8 +77,10 @@ body {
 #menu li {
     margin-left: 10px;
     margin-right: 10px;
+    /* margin-bottom: 0; */
     list-style-type: none;
     float: left;
+    font-weight: 400;
 }
     
 #menu a {
@@ -87,9 +93,9 @@ body {
 
 #logo, #menu {
     line-height: 100px;
-    display: flex;
+    display: flex; 
     padding: 10px;
-    height: 100px;
+    /* height: 100px; */
 }
 
 /* addition of hover effect of navigation menu */
@@ -443,7 +449,7 @@ label {
         font-size: 0.9em;
         margin-left: 5px;
         margin-right: 3px;
-        letter-spacing: 2px;
+        /* letter-spacing: 2px; */
     }
 
     #intro-text {
@@ -604,8 +610,8 @@ label {
 
     h1 {
         font-size: 1em;
-        display: inline-block;
-        text-align: center;
+        /* display: block;
+        text-align: center; */
     }
 
     iframe {
@@ -621,10 +627,10 @@ label {
     #menu>li {
         font-size: 0.8em;
         margin-left: 1px;
-        margin-right: 3px; 
+        margin-right: 3px;
         letter-spacing: 0.2px; 
-        display: -ms-inline-grid;
-        grid-row: 2;
+        /* display: -ms-inline-grid;
+        grid-row: 2; */
     }   
 
     h2 {
