Addition of bullet points of key points in testing section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 /* heading and body styling */
 
 h1 {
-    font-family: Dongle, Helvetica, sans-serif;
+    font-family: Dongle, sans-serif;
     margin: auto;
     font-size: 100px;
     font-weight: 700;
